# tkacz

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.org  ontology.rkt  package.yaml  tkacz.cabal
app/: Main.hs
doc/: TODO  cards-format.org  design.org  implementation.org  ontology.rkt
elisp/: tkacz.el
src/: Lib.hs  Tkacz.hs  cli.rs  lib.rs  main.rs  query.rs  store.rs  taxonomy.rs  thing.rs  types.rs
src/Tkacz/: AddressableTree.hs  Database.hs  Ontology.hs  Taxonomy.hs  Typesystem.hs
