cabal-version:      2.4
name:               tkacz
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: The strange knowledge manager.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports: https://github.com/thblt/tkacz

-- The license under which the package is released.
-- license:
author:             Thibault Polge
maintainer:         thibault@thb.lt

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
                   README.md

library
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    exposed-modules: Tkacz
    build-depends:    base ^>=4.14.1.0
                    , containers >= 0.6.2.1
                    , data-default
                    , aeson
                    , lens >= 5.0.1
                    , mtl >= 2.2.2
    hs-source-dirs:   src
    default-language: Haskell2010

executable tkacz
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0
                    , optparse-applicative >= 0.16.1.0
                    , tkacz
    hs-source-dirs:   app
    default-language: Haskell2010
